spotify file links and home
